--- a/about.html
+++ b/about.html
@@ -95,6 +95,14 @@
           </p>
         </div>
       </div>
+      <div class="skills-section my-5">
+        <div class="headers-3">
+          <h2 class="skills-header">My Skills</h2>
+        </div>
+        <div class="skills-body">
+          <p>Azure | Java | Spring | Python | Django | HTML | CSS | Angular | Bootstrap | Git | SQL | Postman</p> 
+        </div>
+      </div>
     </div>
     <!--scripts.js-->
     <script src="js/scripts.js"></script>
