project & skills added

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
           <h2 class="skills-header">My Skills</h2>
         </div>
         <div class="skills-body">
-          <p>Azure | Java | Spring | Python | Django | HTML | CSS | Angular | Bootstrap | Git | SQL | Postman</p> 
+          <p>Java | Spring | Python | Django | HTML | CSS | Angular | Bootstrap | Git | SQL | Postman</p> 
         </div>
       </div>
     </div>
