--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,26 @@
       </div>
       <div class="projects-section my-5">
         <div class="headers-3">
+          <h2 class="text-dark project-header">Eden-Of-The-East</h2>
+        </div>
+        <div class="project-body pl-3 pt-3">
+          <p>
+            The primary objective of this project was the improve my Angular (frontend) skills and my understanding of web-based APIs. Eden-Of-The-East is a search-engine and a chatbot that utilizes APIs like: JoJ Web-Search and ChatGPT4.
+          </p>
+        </div>
+        <div class="my-vid-div pt-3 pb-3">
+          <video autoplay muted class="project-vid" src="assets/Eden-Of-The-EastDemo.mp4"></video>
+        </div>
+        <div class="project-body pl-3 pt-3">
+          <p>
+            <!-- Additionally, the web-app aims to improve communication 
+            between all parties involved, reduce the time and effort required to complete the placement process, 
+            and help students find suitable job opportunities.<br><br> -->
+            This project was made using <b>Angular</b>. The 
+            source-code can be found <a href="https://github.com/YojitShinde/Eden-Of-The-East">here</a>.
+          </p><br><br>
+        </div>
+        <div class="headers-3">
           <h2 class="text-dark project-header">Placeable</h2>
         </div>
         <div class="project-body pl-3 pt-3">
