added insterests section, updated cv

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Yojit Shinde</title>
+    <title>About - Yojit Shinde</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -60,9 +60,11 @@
       <div class="intro">
         <p>
           In July 2023, I graduated from St. Xavier's College (Autonomous)
-          with my BS in Information Technology. Currently I'm looking for 
-          internship opportunities in the IT space to gain some industry exposure.<br><br>
-          Thank you for viewing my portfolio. I hope you enjoy the experience. Feel free to reach 
+          with my BS in Information Technology.
+          As a Graduate, I'm looking for 
+          IT job opportunities to gain some industry experience.</p>
+          <br>
+          <p>Thank you for viewing my portfolio. I hope you enjoy the experience. Feel free to reach 
           out to me using this mail:
           <a href="mailto:yojitshinde@gmail.com">yojitshinde@gmail.com</a>
         </p>
@@ -75,20 +77,18 @@
       </div>
       <div class="about-section my-5">
         <div class="headers-3">
-          <h2 class="text-dark about-me-header">About Me</h2>
+          <h2 class="text-dark about-me-header">My Story</h2>
         </div>
         <div class="my-img-div pt-3 pb-3">
-          <img class="yojitshinde-pic1" src="assets/YojitShinde-pic1.jpg">
+          <img class="yojitshinde-pic" src="assets/YojitShinde-pic1.jpg">
         </div>
         <div class="about-body pl-3 pt-3">
           <p>
             From a young age, I have been fascinated by computers and their ability to solve complex problems. 
             This interest in computers and technology led me to choose `Computer Application` as an elective during 
-            my 9th and 10th grade. This subject introduced me to some important concepts in programming such as 
-            OOPs fundamentals, Classes, Objects, Datatypes and Methods (User-defined & Pre-defined).<br><br>
-            This introductory subject fuelled my passion for InfoTech and later led me to pursue a Bachelor's degree 
-            in Information Technology. During my undergraduate studies, I was exposed to various programming languages,
-            software developement principles and concepts like data structures & algorithms, which solidified my passion 
+            my 9th and 10th grade. This subject introduced me to some important concepts in programming such as OOPs fundamentals, Classes, Objects, Datatypes and Methods (User-defined & Pre-defined).<br><br>
+            This introductory subject fuelled my passion for InfoTech and later led me to pursue a Bachelor's degree in Information Technology. During my undergraduate studies, I got exposed to various programming languages,
+            software developement technologies and concepts like Computer Networking, which solidified my passion 
             for the field.<br><br>
             My aim is to become a problem-solver. To acquire an ability to translate business requirements into 
             technical solutions.
@@ -103,7 +103,33 @@
           <p>Java | Spring | Python | Django | HTML | CSS | Angular | Bootstrap | Git | SQL | Postman</p> 
         </div>
       </div>
+      <div class="hobbies-section my-5">
+        <div class="headers-3">
+          <h2 class="hobbies-header">My Interests</h2>
+        </div>
+        <div class="hobbies-body">
+          <p>
+            <ol>
+              <li>
+                <b>Self-Learning & Personal Projects</b>: In my free time I like to work on small-scale projects with a goal of learning new technologies and/or mastering the known ones.
+                Some of my notable projects can be found <a href="projects.html">here</a>.<br>
+                Currently I am trying to learn & improve my skills in Azure, Angular, Java (Spring).
+              </li>
+              <li>
+                <b>Music</b>: I can also be found practicing guitar or learning music theory in my free time.
+              </li>
+              <li>
+                <b>Chess</b>: Although I'm only rated around 1200, I do enjoy a good 10 minute chess-game. 
+              </li>
+              <!-- <li>
+                <b>Stories</b>: Lastly I like to experience stories in all avaiable mediums: books, movies & music. 
+              </li> -->
+            </ol>
+          </p> 
+        </div>
+      </div>
     </div>
+    
     <!--scripts.js-->
     <script src="js/scripts.js"></script>
     <!-- Optional JavaScript -->
