--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Yojit Shinde</title>
+    <title>Experience - Yojit Shinde</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -65,12 +65,25 @@
       </div>
       <div class="company-body">
         <p>
-          -> As an Intern, I developed a recruitment portal using <b>Angular, Java (Spring), Oracle Db</b>.<br>
-          -> Designed and implemented Restful APIs for the entire onboarding procedure.<br>
-          -> Improved the front-end design.<br>
-          -> Assisted in the management of other newly onboarded interns.<br><br>
+          <b>-></b> As an <b><u>Intern</u></b>, I developed a recruitment portal using <b>Angular, Java (Spring), Oracle Db</b>.<br>
+          <b>-></b> Designed and implemented Restful APIs for the entire onboarding procedure.<br>
+          <b>-></b> Improved the front-end design.<br>
+          <b>-></b> Assisted in the management of other newly onboarded interns.<br><br>
           Certificate Of Completion:
           <a href="assets/YojitShinde-Internship.pdf">View</a>
+        </p>
+      </div>
+      <div class="headers-2">
+        <h2 class="text-dark company-header">Caregiver Saathi (NGO)</h2>
+        <h4 class="text-dark company-subheader">Remote, India (Sept 2021 - Dec 2021)</h4>
+      </div>
+      <div class="company-body">
+        <p>
+          <b>-></b> As a <b><u>Student Volunteer</u></b>, I handled the administrative tasks.<br>
+          <b>-></b> Wrote reports on the various workshops held by the organization.<br>
+          <b>-></b> Interviewed a caregiver for an article.<br><br>
+          Certificate Of Completion:
+          <a href="assets/YojitShinde-Volunteer.pdf">View</a>
         </p>
       </div>
     </div>
