--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             This introductory subject fuelled my passion for InfoTech and later led me to pursue a Bachelor's degree in Information Technology. During my undergraduate studies, I got exposed to various programming languages,
             software developement technologies and concepts like Computer Networking, which solidified my passion 
             for the field.<br><br>
-            My aim is to become a problem-solver. To acquire an ability to translate business requirements into 
+            My aim is to become a problem-solver, To acquire an ability to translate business requirements into 
             technical solutions.
           </p>
         </div>
