--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
       </div>
       <div class="intro">
         <p>
-          Below you'll find some of my favorite projects I've worked on. I hope you like them :)<br><br>
+          Here are some of my favourite projects that I have worked on. I hope you like them :)<br><br>
         </p>
       </div>
       <div class="resume-box">
