doable apk added

--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,8 @@
         <div class="project-body pl-3 pt-3">
           <p>
             A Simple To-Do-List Application for Android Devices. The app consists of a handy 'Read List' 
-            feature to assist the visually impared. Additionally, users can share their list with the 'Share List' feature.
+            feature to assist the visually impared. Additionally, users can share their list with the 'Share List' feature.<br>
+            Try the app by downloading the android <a href="assets/app-debug.apk">apk</a>.
           </p>
         </div>
         <div class="my-vid-div pt-3 pb-3">
