web-app url added & resume updated

--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,9 @@
         </div>
         <div class="project-body pl-3 pt-3">
           <p>
-            The primary objective of this project was the improve my Angular (frontend) skills and my understanding of web-based APIs. Eden-Of-The-East is a search-engine and a chatbot that utilizes APIs like: JoJ Web-Search and ChatGPT4.
+            The primary objective of this project was the improve my Angular (frontend) skills and my understanding of web-based APIs. 
+            Eden-Of-The-East is a search-engine that utilizes APIs like: JoJ Web-Search and ChatGPT4.<br>
+            Try the web-app by clicking this <a href="https://edenoftheeast.netlify.app">link</a>.
           </p>
         </div>
         <div class="my-vid-div pt-3 pb-3">
