--- a/about.html
+++ b/about.html
@@ -70,14 +70,18 @@
         </p>
       </div>
       <div class="resume-box pt-3 pb-3">
-        <div class="headers-2">
+        <div class="resume-left">
+          <img class="printer" src="assets/printer.gif">
+        </div>
+        <div class="resume-right">
           <h2 class="text-dark resume-header">Need my resume?</h2>
           <label class="resume-link"><a href="assets/YojitShinde-Resume.pdf">Click here to download it</a></label>
         </div>
+        <div class="headers-2"></div>
       </div>
       <div class="about-section my-5">
         <div class="headers-3">
-          <h2 class="text-dark about-me-header">My Story</h2>
+          <h2 class="text-dark about-me-header">About Me</h2>
         </div>
         <div class="my-img-div pt-3 pb-3">
           <img class="yojitshinde-pic" src="assets/YojitShinde-pic1.jpg">
@@ -97,7 +101,7 @@
       </div>
       <div class="skills-section my-5">
         <div class="headers-3">
-          <h2 class="skills-header">My Skills</h2>
+          <h2 class="skills-header">Skills I Offer</h2>
         </div>
         <div class="skills-body">
           <p>Java | Spring | Python | Django | HTML | CSS | Angular | Bootstrap | Git | SQL | Postman</p> 
@@ -105,7 +109,7 @@
       </div>
       <div class="hobbies-section my-5">
         <div class="headers-3">
-          <h2 class="hobbies-header">My Interests</h2>
+          <h2 class="hobbies-header">My Hobbies</h2>
         </div>
         <div class="hobbies-body">
           <p>
