--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,14 @@
       <a class="social-icon" href="https://github.com/YojitShinde"><i class="fab fa-github"></i></a>
     </div><br><br><br>
     <div class="resume-box pt-3 pb-3">
-      <div class="headers-2">
+      <div class="resume-left">
+        <img class="printer" src="assets/printer.gif">
+      </div>
+      <div class="resume-right">
         <h2 class="text-dark resume-header">Need my resume?</h2>
         <label class="resume-link"><a href="assets/YojitShinde-Resume.pdf">Click here to download it</a></label>
       </div>
+      <div class="headers-2"></div>
     </div>
     </div>
     <!--scripts.js-->
