--- a/experience.html
+++ b/experience.html
@@ -54,10 +54,14 @@
     <div class="page-content p-5" id="content">
       <button id="sidebarCollapse" type="button" onclick="toggleBtnClicked()" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small></button>
       <div class="resume-box pt-3 pb-3">
-        <div class="headers-1">
+        <div class="resume-left">
+          <img class="printer" src="assets/printer.gif">
+        </div>
+        <div class="resume-right">
           <h2 class="text-dark resume-header">Need my resume?</h2>
           <label class="resume-link"><a href="assets/YojitShinde-Resume.pdf">Click here to download it</a></label>
         </div>
+        <div class="headers-2"></div>
       </div>
       <div class="headers-2">
         <h2 class="text-dark company-header">Mindgate Solutions</h2>
