--- a/projects.html
+++ b/projects.html
@@ -61,10 +61,14 @@
         </p>
       </div>
       <div class="resume-box">
-        <div class="headers-2">
+        <div class="resume-left">
+          <img class="printer" src="assets/printer.gif">
+        </div>
+        <div class="resume-right">
           <h2 class="text-dark resume-header">Need my resume?</h2>
           <label class="resume-link"><a href="assets/YojitShinde-Resume.pdf">Click here to download it</a></label>
         </div>
+        <div class="headers-2"></div>
       </div>
       <div class="projects-section my-5">
         <div class="headers-3">
