about page and resume updated

--- a/about.html
+++ b/about.html
@@ -59,10 +59,8 @@
       </div>
       <div class="intro">
         <p>
-          In July 2023, I graduated from St. Xavier's College (Autonomous)
-          with my BS in Information Technology.
-          As a Graduate, I'm looking for 
-          IT job opportunities to gain some industry experience.</p>
+          In July 2023, I graduated from St. Xavier's College (Bombay) with my BS in Information Technology.
+          Currently I'm pursuing Master of Computer Applications at Christ University (Bangalore).</p>
           <br>
           <p>Thank you for viewing my portfolio. I hope you enjoy the experience. Feel free to reach 
           out to me using this mail:
@@ -91,9 +89,9 @@
             From a young age, I have been fascinated by computers and their ability to solve complex problems. 
             This interest in computers and technology led me to choose `Computer Application` as an elective during 
             my 9th and 10th grade. This subject introduced me to some important concepts in programming such as OOPs fundamentals, Classes, Objects, Datatypes and Methods (User-defined & Pre-defined).<br><br>
-            This introductory subject fuelled my passion for InfoTech and later led me to pursue a Bachelor's degree in Information Technology. During my undergraduate studies, I got exposed to various programming languages,
-            software developement technologies and concepts like Computer Networking, which solidified my passion 
-            for the field.<br><br>
+            This introductory subject fuelled my passion for InfoTech and later led me to pursue a Bachelor's and a Master's degree in Information Technology. During my studies, I got exposed to various programming languages,
+            software developement technologies and concepts like Computer Networking and DSA, which solidified my skills 
+            in the field.<br><br>
             My aim is to become a problem-solver, To acquire an ability to translate business requirements into 
             technical solutions.
           </p>
@@ -120,7 +118,7 @@
                 Currently I am trying to learn & improve my skills in Azure, Angular, Java (Spring).
               </li>
               <li>
-                <b>Music</b>: I can also be found practicing guitar or learning music theory in my free time.
+                <b>Music</b>: I can also be found practicing guitar in my free time.
               </li>
               <li>
                 <b>Chess</b>: Although I'm only rated around 1200, I do enjoy a good 10 minute chess-game. 
