a sentence in about-section corrected (minor fix)

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
           <p>
             From a young age, I have been fascinated by computers and their ability to solve complex problems. 
             This interest in computers and technology led me to choose `Computer Application` as an elective during 
-            my 9th and 10th grade. This subject introduced me to some important concepts in programming such as OOPs fundamentals, Classes, Objects, Datatypes and Methods (User-defined & Pre-defined).<br><br>
+            my 9th and 10th grade. This subject introduced me to some important concepts in programming such as OOPs fundamentals, Classes, Objects, Datatypes, Variables and Methods.<br><br>
             This introductory subject fuelled my passion for InfoTech and later led me to pursue a Bachelor's and a Master's degree in Information Technology. During my studies, I got exposed to various programming languages,
             software developement technologies and concepts like Computer Networking and DSA, which solidified my skills 
             in the field.<br><br>
